# rustsay

./: Cargo.toml  LICENSE  README.md
.github/workflows/: brew-deploy.yml  publish-crates.yml  rust-clippy.yml
Formula/: rustsay.rb
src/: main.rs
